# mcpkit

./: .gitignore  ARCHITECTURE.md  AUTH_DESIGN.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONSTRAINTS.md  CONTRIBUTING.md  DEPENDENCY_POLICY.md  HeaderNavLinks.json  LICENSE  Makefile  PLAN.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  VERSIONING.md  auth.go  auth_test.go  client.go  client_auth_retry_test.go  client_logging.go  client_logging_test.go  client_memory.go  client_reconnect.go  client_reconnect_test.go  client_test.go  completion.go  completion_test.go  devex_test.go  dispatch.go  dispatch_test.go  elicitation.go  elicitation_test.go  go.mod  go.sum  index.html  jsonrpc.go  (+26 more)
.github/: dependabot.yml
RELEASES/: 2026-06-30.md
agent/: CONSTRAINTS.md  agent_source.go  agent_source_test.go  anthropic_provider.go  anthropic_provider_test.go  approval.go  approval_test.go  background.go  background_test.go  client_source.go  compaction.go  compaction_test.go  doc.go  elicitation.go  elicitation_test.go  embedder.go  embedder_test.go  events.go  failover.go  failover_test.go  filter_source.go  func_source.go  go.mod  incoming_event.go  injection.go  memory.go  memory_test.go  multi_source.go  offloading_source.go  offloading_source_test.go  openai_provider.go  policy_test.go  provider.go  provider_test.go  routing_test.go  runner.go  runner_cancel_test.go  runner_test.go  runstore.go  runstore_test.go  (+23 more)
auth/: dcr_test.go  discovery.go  extension.go  go.mod  go.sum  jwt_validator.go  scopes.go  server_auth.go  token_source.go  (+2 more)
(+1832 files in other folders)
